chaning body font

--- a/less/creative.less
+++ b/less/creative.less
@@ -1,6 +1,8 @@
 @import "variables.less";
 @import "mixins.less";
 
+@import url('https://fonts.googleapis.com/css?family=Asar');
+
 // Global Components
 html,
 body {
@@ -9,7 +11,7 @@ body {
 }
 
 body {
-    .serif-font;
+    font-family: 'Asar', serif;
 }
 
 hr {
