--- a/css/creative.css
+++ b/css/creative.css
@@ -4,6 +4,8 @@
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap/blob/gh-pages/LICENSE)
  */
 @import url('https://fonts.googleapis.com/css?family=Asar');
+@import url('https://fonts.googleapis.com/css?family=Norican');
+@import url('https://fonts.googleapis.com/css?family=Rouge+Script');
 html,
 body {
   height: 100%;
@@ -30,16 +32,24 @@ a:hover,
 a:focus {
   color: #a32020;
 }
-h1,
+h1 {
+  font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
+}
 h2,
 h3,
 h4,
 h5,
 h6 {
-  font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
+  font-family: 'Rouge Script', cursive;
+}
+h2 {
+  font-size: 50px;
+}
+h3 {
+  font-size: 40px;
 }
 p {
-  font-size: 16px;
+  font-size: 20px;
   line-height: 1.5;
   margin-bottom: 20px;
 }
@@ -171,7 +181,7 @@ header .header-content .header-content-inner h1 {
   text-transform: uppercase;
   margin-top: 0;
   margin-bottom: 0;
-  font-size: 30px;
+  font-size: 40px;
 }
 header .header-content .header-content-inner hr {
   margin: 30px auto;
@@ -179,7 +189,7 @@ header .header-content .header-content-inner hr {
 header .header-content .header-content-inner p {
   font-weight: 300;
   color: rgba(255, 255, 255, 0.7);
-  font-size: 16px;
+  font-size: 22px;
   margin-bottom: 50px;
 }
 @media (min-width: 768px) {
@@ -200,10 +210,10 @@ header .header-content .header-content-inner p {
     margin-right: auto;
   }
   header .header-content .header-content-inner h1 {
-    font-size: 50px;
+    font-size: 60px;
   }
   header .header-content .header-content-inner p {
-    font-size: 18px;
+    font-size: 22px;
     max-width: 80%;
     margin-left: auto;
     margin-right: auto;
