whole makupaketti page, imgs, changes in texts everywhere, paypal added to buy button

--- a/less/creative.less
+++ b/less/creative.less
@@ -180,7 +180,6 @@ header {
     min-height: auto;
     .background-cover;
     background-position: center;
-    background-image: url('../img/header.jpg');
     text-align: center;
     color: white;
     .header-content {
@@ -232,6 +231,14 @@ header {
             }
         }
     }
+}
+
+header.home {
+    background-image: url('../img/header.jpg');
+}
+
+header.makupaketti {
+    background-image: url('../img/header-makupaketti.jpg');
 }
 
 // Sections
