--- a/css/creative.css
+++ b/css/creative.css
@@ -166,7 +166,6 @@ header {
   background-size: cover;
   -o-background-size: cover;
   background-position: center;
-  background-image: url('../img/header.jpg');
   text-align: center;
   color: white;
 }
@@ -218,6 +217,12 @@ header .header-content .header-content-inner p {
     margin-left: auto;
     margin-right: auto;
   }
+}
+header.home {
+  background-image: url('../img/header.jpg');
+}
+header.makupaketti {
+  background-image: url('../img/header-makupaketti.jpg');
 }
 .section-heading {
   margin-top: 0;
