--- a/css/makulia.css
+++ b/css/makulia.css
@@ -1,7 +1,7 @@
 img.logo {
-	max-height: 110%;
-	padding-bottom: 10px;
+	height: 65px;
 }
-.footer img {
-	max-height: 10%;
+.navbar-header img.logo {
+	height: 35px;
+	padding-bottom: 10px;
 }
