--- a/css/makulia.css
+++ b/css/makulia.css
@@ -5,3 +5,15 @@ img.logo {
 	height: 35px;
 	padding-bottom: 10px;
 }
+.product-summary {
+	font-family: 'Raleway', sans-serif;
+	font-weight: 300;
+	font-style: italic;
+	font-size: 19px;
+}
+.product p {
+    font-size: 18px;
+}
+.padding-top {
+	padding-top: 25px;
+}
