--- a/css/creative.css
+++ b/css/creative.css
@@ -3,16 +3,16 @@
  * Copyright 2013-2017 Start Bootstrap
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap/blob/gh-pages/LICENSE)
  */
-@import url('https://fonts.googleapis.com/css?family=Asar');
-@import url('https://fonts.googleapis.com/css?family=Norican');
+@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:300');
 @import url('https://fonts.googleapis.com/css?family=Rouge+Script');
+@import url('https://fonts.googleapis.com/css?family=Raleway:200,200i,300i,400i');
 html,
 body {
   height: 100%;
   width: 100%;
 }
 body {
-  font-family: 'Asar', serif;
+  font-family: 'Source Sans Pro', sans-serif;
 }
 hr {
   border-color: #ce2828;
@@ -52,6 +52,7 @@ p {
   font-size: 20px;
   line-height: 1.5;
   margin-bottom: 20px;
+  font-weight: 300;
 }
 .bg-primary {
   background-color: #ce2828;
@@ -186,7 +187,9 @@ header .header-content .header-content-inner hr {
   margin: 30px auto;
 }
 header .header-content .header-content-inner p {
-  font-weight: 300;
+  font-family: 'Raleway', sans-serif;
+  font-weight: 400;
+  font-style: italic;
   color: rgba(255, 255, 255, 0.7);
   font-size: 22px;
   margin-bottom: 50px;
