--- a/less/creative.less
+++ b/less/creative.less
@@ -1,9 +1,9 @@
 @import "variables.less";
 @import "mixins.less";
 
-@import url('https://fonts.googleapis.com/css?family=Asar');
-@import url('https://fonts.googleapis.com/css?family=Norican');
+@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:300');
 @import url('https://fonts.googleapis.com/css?family=Rouge+Script');
+@import url('https://fonts.googleapis.com/css?family=Raleway:200,200i,300i,400i');
 
 // Global Components
 html,
@@ -13,7 +13,7 @@ body {
 }
 
 body {
-    font-family: 'Asar', serif;
+    font-family: 'Source Sans Pro', sans-serif;
 }
 
 hr {
@@ -59,6 +59,7 @@ p {
     font-size: 20px;
     line-height: 1.5;
     margin-bottom: 20px;
+    font-weight: 300;
 }
 
 .bg-primary {
@@ -199,7 +200,9 @@ header {
                 margin: 30px auto;
             }
             p {
-                font-weight: 300;
+                font-family: 'Raleway', sans-serif;
+                font-weight: 400;
+                font-style: italic;
                 color: fade(white, 70%);
                 font-size: 22px;
                 margin-bottom: 50px;
