--- a/css/creative.css
+++ b/css/creative.css
@@ -3,7 +3,7 @@
  * Copyright 2013-2017 Start Bootstrap
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap/blob/gh-pages/LICENSE)
  */
-@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:300');
+@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,600');
 @import url('https://fonts.googleapis.com/css?family=Rouge+Script');
 @import url('https://fonts.googleapis.com/css?family=Raleway:200,200i,300i,400i');
 html,
@@ -36,11 +36,15 @@ h1 {
   font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
 }
 h2,
-h3,
+h3 {
+  font-family: 'Rouge Script', cursive;
+}
 h4,
 h5,
 h6 {
-  font-family: 'Rouge Script', cursive;
+  font-family: 'Raleway', cursive;
+  font-style: italic;
+  font-weight: 400;
 }
 h2 {
   font-size: 50px;
@@ -48,11 +52,21 @@ h2 {
 h3 {
   font-size: 40px;
 }
+h4 {
+  font-size: 20px;
+}
+h5 {
+  font-size: 18px;
+}
 p {
   font-size: 20px;
   line-height: 1.5;
   margin-bottom: 20px;
   font-weight: 300;
+}
+b,
+strong {
+  font-weight: 600;
 }
 .bg-primary {
   background-color: #ce2828;
