--- a/css/creative.css
+++ b/css/creative.css
@@ -143,6 +143,14 @@ aside {
   .navbar-default .navbar-header .navbar-brand:focus {
     color: white;
   }
+  .navbar-default .nav.product > li > a,
+  .navbar-default .nav.product > li > a:focus {
+    color: rgba(229, 229, 229, 0.7);
+  }
+  .navbar-default .nav.product > li > a:hover,
+  .navbar-default .nav.product > li > a:focus:hover {
+    color: #e5e5e5;
+  }
   .navbar-default .nav > li > a,
   .navbar-default .nav > li > a:focus {
     color: rgba(255, 255, 255, 0.7);
