--- a/css/makulia.css
+++ b/css/makulia.css
@@ -27,3 +27,15 @@ ul.product .fa {
 .black {
 	color: black;
 }
+.white {
+	color: white;
+}
+.header-content-inner p {
+	border-radius: 10px;
+	background-color: rgba(0, 0, 0, 0.3);
+	padding: 20px;
+}
+/*
+.header-content-inner {
+	text-shadow: 0 0 10px black;
+}
