--- a/less/creative.less
+++ b/less/creative.less
@@ -268,6 +268,10 @@ header.makupaketti {
     background-image: url('../img/header-makupaketti.jpg');
 }
 
+header.etusivu {
+    background-image: url('../img/header-etusivu.jpg');
+}
+
 // Sections
 
 .section-heading {
